src/test/deca/codegen/invalid/sansObjet/mod_zero.deca
// Description :
//    Modulo par 0 
//
// Resultats :
//    Erreur : reste de la division entiere par zero


{
    int a = 10;
    int b = 0;
    print(a % b);
}